# src/routes/order.rt.js
@@ -4,8 +4,11 @@ import * as orderController from '../controllers/order.ct.js';
 import { verifyToken } from '../middleware/auth.mw.js';
 import { upload, compressFiles } from '../middleware/fileUpload.mw.js';
 
-// GET all ordersgit 
+// GET all orders
 router.get('/', orderController.getAllOrders);
+
+// GET orders by current user ID
+router.get('/my-orders', verifyToken, orderController.getOrdersByUserId);
 
 // GET today's orders
 router.get('/today', orderController.getTodayOrders);
@@ -14,7 +17,7 @@ router.get('/today', orderController.getTodayOrders);
 router.get('/:id', orderController.getOrderById);
 
 // CREATE a new order
-router.post('/', upload.array('files', 10), compressFiles, orderController.createOrder);
+router.post('/', verifyToken, upload.array('files', 10), compressFiles, orderController.createOrder);
 
 // UPDATE an order by ID
 router.put('/:id', verifyToken, orderController.updateOrder);
